--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="graph.html">graph</a></li>
+                <li><a href="graph">graph</a></li>
                 <li><a href="http://parthsarthee.com/">PARTH SARTHEE(Author)</a></li>
                 <li><a href="http://aroxbit.com">AROXBIT(Awesome Indie Startup)</a></li>
             </ul>
