--- a/templates/graph.html
+++ b/templates/graph.html
@@ -75,7 +75,7 @@
 
         const lineChart = new Chart(context, config);
 
-        const source = new EventSource("/chart");
+        const source = new EventSource("/chart-data");
 
         source.onmessage = function (event) {
             const data = JSON.parse(event.data);
